VUE: Se agregan nuevas funcionalidades, como tambien nuevas anotaciones, ademas se incluye el VUE.JS para dejar de usar el CDN

--- a/Curso/index.html
+++ b/Curso/index.html
@@ -11,15 +11,35 @@
     <div id="app">
         <h1>{{titulo}}</h1>
 
+        <button @click="otroMetodo">Consola y Alert</button>
+        <br>
+
         <p>{{texto}}</p>
 
-        <!-- 3) este ejemplo es para agregar una nueva fruta a nuestra lista actual, ademas se muestra la forma de enlazar HTML hacia nuestro JS -->
-        <input type="text" v-model="nuevaFruta">
+        <!-- 3) este ejemplo es para agregar una nueva fruta a nuestra lista actual, 
+            ademas se muestra la forma de enlazar HTML hacia nuestro JS -->
+        <!-- <input type="text" v-model="nuevaFruta"> -->
+
+        <!-- 4) con la instruccion @keyup.TECLA="METODO" enlazamos el INPUT revisar **Key Modifiers** 
+        con este codigo: @keyup.enter="agregarFruta" al dar ENTER va a agregar la fruta a la lista
+        -->
+        <label for="cantidadFruta">Cantidad:</label>
+        <br>
+        <input type="number" v-model="cantidadFruta" id="cantidadFruta">                
+        <br>
+        <label for="TipoFruta">Tipo de Fruta: </label>
+        <br>
+        <input type="text" v-model="nuevaFruta" @keyup.enter="agregarFruta" id="TipoFruta">
+        <br>
+        <!-- Se utiliza el v-model para enalazar HTML al JS, en este caso se usa nuevaFruta que esta 
+                dentro del DATA -->
         <!-- **** Ambas Funcionan Igual ****  -->
         <!-- v-on:click="AlgunMetodoQueCreamos" :: reacciona al click -->
         <!-- @click="AlgunMetodoQueCreamos" :: reacciona al click y es un forma abreviada -->
         <button @click="agregarFruta">Agregar</button>
         <!-- 3) FIN -->
+
+        
 
         <ul>
             <!-- v-for = es un ciclo FOR -->
@@ -30,14 +50,22 @@
             <!-- <li v-for="fruta of frutas">{{fruta}}</li> -->
 
             <!-- 2) este ejemplo es para leer un arreglo que contien objetos -->
+            <!-- <li v-for="fruta of frutas"> -->
+                <!-- {{fruta.cantidad}} - {{fruta.nombre}} -->
+                <!-- <span v-if="fruta.cantidad === 0"> - Sin Stock</span> -->
+            <!-- </li> -->
+
+            <!-- 4) este ejemplo es para agregar un input en la cantidad -->
             <li v-for="fruta of frutas">
-                {{fruta.cantidad}} - {{fruta.nombre}}
+                <input type="number" v-model.number="fruta.cantidad">
+                {{fruta.nombre}}
                 <span v-if="fruta.cantidad === 0"> - Sin Stock</span>
             </li>
         </ul>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
+    <!-- <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script> -->
+    <script src="vue.js"></script>
     <script src="01.js"></script>
 </body>
 
